# textmode-playground

./: .gitignore  README.md  ascii_gravity.py  ascii_gravity2.py  boids.py  falling_particles.py  fluid.py  game_of_life.go  gravity.py  gravity_multi_bodies.py  lightning.py  line.py  lines.py  orbit.py  rect.py  requirements.txt  shift.dot  shift.py  spectrogram.py  unicode_example.py  unicode_support.py  wave_signal.py
boids/: boids.py
demos/: gif_maker.sh
digital_rain/: Cargo.toml
digital_rain/src/: main.rs
explorer/: Cargo.toml
explorer/src/: lib.rs  main.rs  screen_buffer.rs
fluid/: fluid.py
matrix/: Cargo.toml
matrix/src/: main.rs
orbit/: orbit.py
rect/: rect.py
shift/: shift.dot
spectrogram/: spectrogram.py
synoglyphs/: synoglyphs.py
tools/: alphanum_to_unicode_subset.csv  ascii_all.csv  ascii_to_ascii.csv  braille_to_ascii.csv  char_cmp.py  gif_maker.sh  glyphs_cmp.py  img_to_ansi.py  img_to_braille.py  requirements.txt  unicode_support.py
