[package]
name = "digital_rain"
version = "0.1.0"
edition = "2021"
authors = ["Mateusz Janda <mateusz.janda@gmail.com>"]
repository = "https://github.com/MateuszJanda/textmode-playground"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0"
rand = "0.8"

[dependencies.tokio]
version = "1.29"
features = [
    "rt-multi-thread",
    "macros",
    "time",
]